docs(Badge): design review - badge story page

--- a/src/components/Badge/__stories__/Badge.stories.mdx
+++ b/src/components/Badge/__stories__/Badge.stories.mdx
@@ -1,15 +1,15 @@
 import Badge from "../Badge";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { createComponentTemplate, createStoryMetaSettings, RelatedComponents } from "../../../storybook";
-import styles from "./Badge.stories.module.scss";
 import person from "./assets/person.png";
 import { ExternalPage, WhatsNew } from "../../Icon/Icons";
 import Link from "../../Link/Link";
 import Button from "../../Button/Button";
 import Flex from "../../Flex/Flex";
 import Avatar from "../../Avatar/Avatar";
-import { useState } from "react";
 import { BUTTON, COUNTER, LINK } from "../../../storybook/components/related-components/component-description-map";
+import { useSwitch } from "../../../hooks";
+import Checkbox from "../../Checkbox/Checkbox";
 
 export const metaSettings = createStoryMetaSettings({
   component: Badge,
@@ -56,35 +56,39 @@ Badge component is responsible for positioning an indicator/counter on a child c
 
 <Canvas>
   <Story name="Block component">
-    <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.MEDIUM}>
-      <Badge>
-        <Button leftIcon={WhatsNew}>What's new</Button>
-      </Badge>
-      <Badge>
-        <Button kind={Button.kinds.SECONDARY} leftIcon={WhatsNew}>
-          What's new
-        </Button>
-      </Badge>
-      <Badge>
-        <Button kind={Button.kinds.TERTIARY} leftIcon={WhatsNew}>
-          What's new
-        </Button>
-      </Badge>
-    </Flex>
-    <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.MEDIUM}>
-      <Badge type={Badge.types.COUNTER}>
-        <Button leftIcon={WhatsNew}>What's new</Button>
-      </Badge>
-      <Badge type={Badge.types.COUNTER}>
-        <Button kind={Button.kinds.SECONDARY} leftIcon={WhatsNew}>
-          What's new
-        </Button>
-      </Badge>
-      <Badge type={Badge.types.COUNTER}>
-        <Button kind={Button.kinds.TERTIARY} leftIcon={WhatsNew}>
-          What's new
-        </Button>
-      </Badge>
+    <Flex gap={Flex.gaps.LARGE} justify={Flex.justify.SPACE_AROUND} style={{ flex: 1 }}>
+      <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.LARGE}>
+        Indicator
+        <Badge>
+          <Button leftIcon={WhatsNew}>What's new</Button>
+        </Badge>
+        <Badge>
+          <Button kind={Button.kinds.SECONDARY} leftIcon={WhatsNew}>
+            What's new
+          </Button>
+        </Badge>
+        <Badge>
+          <Button kind={Button.kinds.TERTIARY} leftIcon={WhatsNew}>
+            What's new
+          </Button>
+        </Badge>
+      </Flex>
+      <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.LARGE}>
+        Counter
+        <Badge type={Badge.types.COUNTER}>
+          <Button leftIcon={WhatsNew}>What's new</Button>
+        </Badge>
+        <Badge type={Badge.types.COUNTER}>
+          <Button kind={Button.kinds.SECONDARY} leftIcon={WhatsNew}>
+            What's new
+          </Button>
+        </Badge>
+        <Badge type={Badge.types.COUNTER}>
+          <Button kind={Button.kinds.TERTIARY} leftIcon={WhatsNew}>
+            What's new
+          </Button>
+        </Badge>
+      </Flex>
     </Flex>
   </Story>
 </Canvas>
@@ -93,28 +97,17 @@ Badge component is responsible for positioning an indicator/counter on a child c
 
 <Canvas>
   <Story name="Circular component">
-    <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.SMALL}>
-      <Badge circular>
-        <Avatar size={Avatar.sizes.SMALL} src={person} type={Avatar.types.IMG} />
-      </Badge>
-      <Badge circular>
-        <Avatar size={Avatar.sizes.MEDIUM} src={person} type={Avatar.types.IMG} />
-      </Badge>
-      <Badge circular color={Badge.colors.PRIMARY}>
-        <Avatar size={Avatar.sizes.LARGE} src={person} type={Avatar.types.IMG} />
-      </Badge>
-    </Flex>
-    <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.SMALL}>
-      <Badge circular type={Badge.types.COUNTER}>
-        <Avatar size={Avatar.sizes.SMALL} src={person} type={Avatar.types.IMG} />
-      </Badge>
-      <Badge circular type={Badge.types.COUNTER}>
-        <Avatar size={Avatar.sizes.MEDIUM} src={person} type={Avatar.types.IMG} />
-      </Badge>
-      <Badge circular type={Badge.types.COUNTER} color={Badge.colors.PRIMARY}>
-        <Avatar size={Avatar.sizes.LARGE} src={person} type={Avatar.types.IMG} />
-      </Badge>
-    </Flex>
+    {() => {
+      const { isChecked: circular, onChange: setCircular } = useSwitch({ defaultChecked: true });
+      return (
+        <Flex direction={Flex.directions.COLUMN} align={Flex.align.START} gap={Flex.gaps.MEDIUM}>
+          <Badge circular={circular}>
+            <Avatar size={Avatar.sizes.LARGE} src={person} type={Avatar.types.IMG} />
+          </Badge>
+          <Checkbox label="Circular" checked={circular} onChange={setCircular} />
+        </Flex>
+      );
+    }}
   </Story>
 </Canvas>
 
@@ -138,41 +131,36 @@ Badge component is responsible for positioning an indicator/counter on a child c
 
 ### Positioning
 
+We can set the position of the badge in any of the edges of its child component
+
 <Canvas>
   <Story name="Positioning">
-    <div className={styles.grid}>
-      <Badge circular position={Badge.positions.TOP_START}>
-        <Avatar size={Avatar.sizes.MEDIUM} src={person} type={Avatar.types.IMG} />
-      </Badge>
-      <Badge circular position={Badge.positions.TOP_END}>
-        <Avatar size={Avatar.sizes.MEDIUM} src={person} type={Avatar.types.IMG} />
-      </Badge>
-      <Badge circular position={Badge.positions.BOTTOM_START}>
-        <Avatar size={Avatar.sizes.MEDIUM} src={person} type={Avatar.types.IMG} />
-      </Badge>
-      <Badge circular position={Badge.positions.BOTTOM_END}>
-        <Avatar size={Avatar.sizes.MEDIUM} src={person} type={Avatar.types.IMG} />
-      </Badge>
-    </div>
-  </Story>
-</Canvas>
-
-### Visibility
-
-<Canvas>
-  <Story name="Visibility">
-    {() => {
-      const [hasNew, setHasNew] = useState(true);
-      return (
-        <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.MEDIUM} align={Flex.align.START}>
-          <Badge show={hasNew}>
-            <Button leftIcon={WhatsNew} onClick={() => setHasNew(prev => !prev)}>
-              Click to toggle visibility
-            </Button>
-          </Badge>
-        </Flex>
-      );
-    }}
+    <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.LARGE}>
+      <Flex gap={Flex.gaps.LARGE}>
+        <Badge type={Badge.types.COUNTER} position={Badge.positions.TOP_START}>
+          <Button kind={Button.kinds.SECONDARY} leftIcon={WhatsNew}>
+            Top left
+          </Button>
+        </Badge>
+        <Badge type={Badge.types.COUNTER} position={Badge.positions.TOP_END}>
+          <Button kind={Button.kinds.SECONDARY} leftIcon={WhatsNew}>
+            Top right
+          </Button>
+        </Badge>
+      </Flex>
+      <Flex gap={Flex.gaps.LARGE}>
+        <Badge type={Badge.types.COUNTER} position={Badge.positions.BOTTOM_START}>
+          <Button kind={Button.kinds.SECONDARY} leftIcon={WhatsNew}>
+            Bottom left
+          </Button>
+        </Badge>
+        <Badge type={Badge.types.COUNTER} position={Badge.positions.BOTTOM_END}>
+          <Button kind={Button.kinds.SECONDARY} leftIcon={WhatsNew}>
+            Bottom right
+          </Button>
+        </Badge>
+      </Flex>
+    </Flex>
   </Story>
 </Canvas>
 
@@ -205,7 +193,7 @@ Badge component is responsible for positioning an indicator/counter on a child c
             <Avatar size={Avatar.sizes.MEDIUM} src={person} type={Avatar.types.IMG} />
           </Badge>
         ),
-        description: "On circular components (like Avatar), apply circular to it"
+        description: "On circular components (like Avatar), apply 'circular' to it"
       },
       negative: {
         component: (
@@ -214,6 +202,42 @@ Badge component is responsible for positioning an indicator/counter on a child c
           </Badge>
         ),
         description: "Do not leave the indicator in the block edges"
+      }
+    },
+    {
+      positive: {
+        component: (
+          <Badge color={Badge.colors.PRIMARY} border>
+            <Button leftIcon={WhatsNew}>What's new</Button>
+          </Badge>
+        ),
+        description: "When using badge with same color as the child component, use 'border' prop"
+      },
+      negative: {
+        component: (
+          <Badge color={Badge.colors.PRIMARY}>
+            <Button leftIcon={WhatsNew}>What's new</Button>
+          </Badge>
+        ),
+        description: "Do not have the indicator and child component mixed together"
+      }
+    },
+    {
+      positive: {
+        component: (
+          <Badge circular>
+            <Avatar size={Avatar.sizes.MEDIUM} src={person} type={Avatar.types.IMG} />
+          </Badge>
+        ),
+        description: "When using Indicator badge, position it at the top-right edge"
+      },
+      negative: {
+        component: (
+          <Badge circular position={Badge.positions.TOP_START}>
+            <Avatar size={Avatar.sizes.MEDIUM} src={person} type={Avatar.types.IMG} />
+          </Badge>
+        ),
+        description: "Do not place it on any other edge"
       }
     }
   ]}
