--- a/src/hooks/useSwitch/__stories__/useSwitch.stories.mdx
+++ b/src/hooks/useSwitch/__stories__/useSwitch.stories.mdx
@@ -1,5 +1,5 @@
 import { Story, Canvas, Meta } from "@storybook/addon-docs";
-import { FunctionArgument, FunctionArguments } from "../../../storybook";
+import { FunctionArgument, FunctionArguments } from "vibe-storybook-components";
 import useSwitch from "../index";
 import { Toggle, Flex } from "../../../components";
 
