--- a/src/components/dropdown-in-modals/dropdown-in-modals.stories.mdx
+++ b/src/components/dropdown-in-modals/dropdown-in-modals.stories.mdx
@@ -1,28 +1,178 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
-import { useCallback, useState } from "react";
+import { useCallback, useState, useMemo, useRef } from "react";
 import { ComponentNameDecorator } from "../../storybook/components";
 import { OpenModalButton } from "./helpers";
 import ModalContent from "../../components/Modal/ModalContent/ModalContent";
 import Dropdown from "../../components/Dropdown/Dropdown";
 import Modal from "../../components/Modal/Modal";
+import Flex from "../../components/Flex/Flex";
+import Dialog from "../../components/Dialog/Dialog";
+import Button from "../../components/Button/Button";
+import DialogContentContainer from "../../components/DialogContentContainer/DialogContentContainer";
 import styles from "./dropdown-in-modals.module.scss";
 
 <Meta title="Technical Patterns/Display dropdowns inside pop-overs" />
 
 <!--- Component documentation -->
 
-<ComponentNameDecorator withFoundationBackground>Display dropdowns inside pop-overs"</ComponentNameDecorator>
+<ComponentNameDecorator withFoundationBackground>Display dropdowns inside pop-overs</ComponentNameDecorator>
 
 - [Overview](#overview)
 - [Up next](#up-next)
 - [Feedback](#feedback)
 
-## Overview
+## Problem description
 
-Our design system contains various fixed units for radius of elements corners.
+Our dropdowns are implemented using the React Select library.
+One of the styling issues with React Select dropdowns is that the menu is not fully displayed when its container has `overflow: hidden`, `overflow: auto`, or `overflow: scroll`.
+As a result, when dropdown menus are placed inside a scrolling container or within a Vibe's dialog or modal, the dropdown menu appears damaged, as you can see in the following examples.
 
 <Canvas>
-  <Story name="Modal with multiple choice dropdown">
+  <Story name="Modal with damaged dropdown">
+    {() => {
+      const [show, setShow] = useState(false);
+      const closeModal = useCallback(() => {
+        setShow(false);
+      }, [setShow]);
+      const options = [
+        { value: 1, label: "Option 1" },
+        { value: 2, label: "Option 2" },
+        { value: 3, label: "Option 3" }
+      ];
+      return (
+        <div>
+          <OpenModalButton setShow={setShow} />
+          <Modal title="Modal with dropdown" show={show} onClose={closeModal}>
+            <ModalContent>
+              <Dropdown options={options} />
+            </ModalContent>
+          </Modal>
+        </div>
+      );
+    }}
+  </Story>
+</Canvas>
+
+To address this problem, we need to adjust the styling of the dropdown menu to ensure it appears correctly even within these specific container.
+We implemented few methods for solving this issue.
+
+## 'insideOverflowContainer' prop
+
+To handle straightforward scenarios of displaying dropdowns inside a container with relevant overflow styles, you can utilize our dropdown's 'insideOverflowContainer' prop.
+This prop overrides the dropdown menu's default settings and ensures proper display within the container.
+**This solution will work for most cases single select dropdown inside Vibe's Modal or DialogContentContainer, it will not work for Vibe's Dialog.**
+
+Please note that this solution is intended for the most basic use cases and may not function optimally if your
+overflow container has one parent or more with conflicting overflow definitions.
+
+<Canvas>
+  <Story name="insideOverflowContainer">
+    {() => {
+      const [show, setShow] = useState(false);
+      const closeModal = useCallback(() => {
+        setShow(false);
+      }, [setShow]);
+      const options = useMemo(
+        () => [
+          { value: "1", label: "Option 1" },
+          { value: "2", label: "Option 2" },
+          { value: "3", label: "Option 3" },
+          { value: "4", label: "Option 4" },
+          { value: "5", label: "Option 5" }
+        ],
+        []
+      );
+      const dialogStyle = { width: "300px", height: "200px", overflow: "auto" };
+      return (
+        <Flex gap={Flex.gaps.LARGE}>
+          <DialogContentContainer style={dialogStyle}>
+            <Dropdown placeholder="Dropdown inside a scrollable dialog" options={options} insideOverflowContainer />
+          </DialogContentContainer>
+          <div>
+            <OpenModalButton setShow={setShow} />
+            <Modal title="Modal with dropdown" show={show} onClose={closeModal}>
+              <ModalContent>
+                <Dropdown options={options} insideOverflowContainer />
+              </ModalContent>
+            </Modal>
+          </div>
+        </Flex>
+      );
+    }}
+  </Story>
+</Canvas>
+
+## 'insideOverflowWithTransformContainer' prop
+
+The 'insideOverflowContainer' prop will not function as expected for dropdowns displayed inside Vibe's dialog components.
+The reason is that Vibe dialogs use CSS transform to position the dialog next to the attached element.
+For this specific case, use the 'insideOverflowWithTransformContainer' prop to ensure proper display and functionality.
+
+<Canvas>
+  <Story name="insideOverflowWithTransformContainer">
+    {() => {
+      const options = useMemo(
+        () => [
+          { value: "1", label: "Option 1" },
+          { value: "2", label: "Option 2" },
+          { value: "3", label: "Option 3" },
+          { value: "4", label: "Option 4" },
+          { value: "5", label: "Option 5" }
+        ],
+        []
+      );
+      const dialogRef = useRef();
+      const dialogStyle = { width: "300px", height: "200px", overflow: "auto" };
+      const secondDialogContent = (
+        <DialogContentContainer style={dialogStyle} ref={dialogRef}>
+          <Dropdown
+            placeholder="Dropdown inside a scrollable dialog"
+            options={options}
+            insideOverflowWithTransformContainer
+          />
+        </DialogContentContainer>
+      );
+      return (
+        <Dialog
+          ref={dialogRef}
+          content={secondDialogContent}
+          hideTrigger={Dialog.hideShowTriggers.CLICK_OUTSIDE}
+          showTrigger={Dialog.hideShowTriggers.CLICK}
+        >
+          <Button>Press me for dropdown inside dialog!</Button>
+        </Dialog>
+      );
+    }}
+  </Story>
+</Canvas>
+
+## 'popupsContainerSelector' prop
+
+For the most complex use cases, you can utilize our dropdown's "popupsContainerSelector" prop.
+This prop allows you to render all the dropdown's popovers in a different node in the DOM, as specified by the provided selector.
+
+To implement this solution and ensure proper display of all dropdown popovers, you need to define a few styles for the container selector, as shown in the following code example:
+
+```css
+.container {
+  top: 0; // Set the container and the beginning of the web page
+  right: 0; // Set the container and the beginning of the web page
+  position: "fixed"; // The container should not move when scrolling the web page
+  width: "100%"; // The container should cover the whole viewport
+  height: "100%"; // The container should cover the whole viewport
+  pointerevents: "none"; // The container should not block any event
+  zindex: 99999; // The container z index should be heigher from the z-index of the modal/dialog which contains the dropdown itself
+}
+.container * {
+  pointer-events: auto; // all container children should handle events as usual
+}
+```
+
+This solution can be useful for multiselection dropdown with single line state, which contains multiple popovers (one for the dropdown menu and one for the selections which hidden under the counter).
+If you have defined the dropdown's popovers container styles as required, you can use it as demonstrated in the following example:
+
+<Canvas>
+  <Story name="popupsContainerSelector">
     {() => {
       const [show, setShow] = useState(false);
       const closeModal = useCallback(() => {
@@ -60,12 +210,7 @@ Our design system contains various fixed units for radius of elements corners.
           <OpenModalButton setShow={setShow} />
           <Modal id="modal-with-multiple-choice" title="Modal with dropdown" show={show} onClose={closeModal}>
             <ModalContent>
-              <Dropdown
-                multi
-                options={options}
-                popupsContainerSelector={"#popovers-container"}
-                className="dropdown-stories-styles_with-chips"
-              />
+              <Dropdown multi options={options} popupsContainerSelector="#popovers-container" />
             </ModalContent>
           </Modal>
         </div>
