--- a/src/storybook/stand-alone-documentaion/welcome/welcome.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/welcome/welcome.stories.mdx
@@ -5,6 +5,7 @@ import { Principles } from "./principles/principles";
 import { Contributors } from "./contributors/contributors";
 import { WelcomeHeader } from "./welcome-header/welcome-header";
 import { OtherContributorsList } from "./other-contributors-list/other-contributors-list";
+import { Link } from "vibe-storybook-components";
 
 <Meta title="Welcome" />
 
@@ -17,7 +18,7 @@ import { OtherContributorsList } from "./other-contributors-list/other-contribut
 
 ## Our principles
 
-Our design principles were developed based on best practices to ensure top-notch user experience, stickiness, and delight. Read more
+Our design principles were developed based on best practices to ensure top-notch user experience, stickiness, and delight.
 
 <Principles />
 
@@ -32,7 +33,7 @@ Our design principles were developed based on best practices to ensure top-notch
 monday.com’s designers, developers, and writers provide teams with universal assets—elements, components, patterns, and code—and the guidance on how to design and build with them.
 We welcome contributions to monday.com design system!
 
-Read our contributing guide and help us build and improve our components.
+Read our<Link href="https://github.com/mondaycom/monday-ui-react-core/blob/master/CONTRIBUTING.md">contribution guide</Link>and help us build and improve our components.
 
 ### Meet the Vibe team
 
