--- a/src/storybook/patterns/dropdown-in-modals/dropdown-in-modals.stories.mdx
+++ b/src/storybook/patterns/dropdown-in-modals/dropdown-in-modals.stories.mdx
@@ -1,14 +1,15 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import { useCallback, useState, useMemo, useRef } from "react";
-import { ComponentNameDecorator } from "../../storybook/components";
+import { ComponentNameDecorator } from "../../components";
 import { OpenModalButton } from "./helpers";
-import ModalContent from "../../components/Modal/ModalContent/ModalContent";
-import Dropdown from "../../components/Dropdown/Dropdown";
-import Modal from "../../components/Modal/Modal";
-import Flex from "../../components/Flex/Flex";
-import Dialog from "../../components/Dialog/Dialog";
-import Button from "../../components/Button/Button";
-import DialogContentContainer from "../../components/DialogContentContainer/DialogContentContainer";
+import ModalContent from "../../../components/Modal/ModalContent/ModalContent";
+import Dropdown from "../../../components/Dropdown/Dropdown";
+import Modal from "../../../components/Modal/Modal";
+import Flex from "../../../components/Flex/Flex";
+import Dialog from "../../../components/Dialog/Dialog";
+import Button from "../../../components/Button/Button";
+import { Link } from "vibe-storybook-components";
+import DialogContentContainer from "../../../components/DialogContentContainer/DialogContentContainer";
 import styles from "./dropdown-in-modals.module.scss";
 
 <Meta title="Technical Patterns/Display dropdowns inside pop-overs" />
@@ -168,10 +169,12 @@ To implement this solution and ensure proper display of all dropdown popovers, y
 }
 ```
 
-This solution can be useful for multiselection dropdown with single line state, which contains multiple popovers (one for the dropdown menu and one for the selections which hidden under the counter).
-If you have defined the dropdown's popovers container styles as required, you can use it as demonstrated in the following example:
+<!--- We are hiding the story from the docs block becasue it's not working well in this view because of the way stories render there -->
 
-<Canvas>
+This solution can be useful for multiselection dropdown with single line state, which contains multiple popovers (one for the dropdown menu and one for the selections which hidden under the counter).
+If you have defined the dropdown's popovers container styles as required, you can use it as demonstrated in the following example <Link href="/?path=/story/technical-patterns-display-dropdowns-inside-pop-overs--popups-container-selector" withoutSpacing>(click here for a live demo)</Link>
+
+<Canvas className={styles.hideStory}>
   <Story name="popupsContainerSelector">
     {() => {
       const [show, setShow] = useState(false);
@@ -218,3 +221,27 @@ If you have defined the dropdown's popovers container styles as required, you ca
     }}
   </Story>
 </Canvas>
+
+```jsx
+<div>
+  <div
+    id="popovers-container"
+    style={{
+      position: "fixed",
+      width: "100%",
+      pointerEvents: "none",
+      zIndex: 99999,
+      height: "100%",
+      top: 0,
+      right: 0
+    }}
+    className={styles.pointerEventsAutoToAllChildren}
+  />
+  <OpenModalButton setShow={setShow} />
+  <Modal id="modal-with-multiple-choice" title="Modal with dropdown" show={show} onClose={closeModal}>
+    <ModalContent>
+      <Dropdown multi options={options} popupsContainerSelector="#popovers-container" />
+    </ModalContent>
+  </Modal>
+</div>
+```
